Third Commit - Implementing Presentation Layer - FavoriteList Functionality - Class 8

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,9 @@ dependencies {
     kapt roomCompiler
     implementation roomRxJavaLib
 
+    //Added in class 8
+    implementation reactiveStreamsLib
+
     //RxJava
     implementation rxAndroidLib
     implementation rxJavaLib
