--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     //kapt "android.arch.lifecycle:compiler:1.0.0"
     //kapt 'com.github.bumptech.glide:compiler:4.14.2'
 
+    implementation project(":domain")
+
     //Kotlin
     implementation kotlinLib
 
